--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,3 +22,13 @@ jobs:
       run: echo "IvannaG"
     - name: Run unit tests for the application 
       run: npm run test:unit
+
+  deploy:
+    needs: build-and-run-unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
